--- a/FREELA-API/pom.xml
+++ b/FREELA-API/pom.xml
@@ -80,7 +80,14 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
             <version>3.0.5</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+
+	</dependencies>
+
 
     <build>
         <plugins>
