--- a/FREELA-API/src/main/resources/application.properties
+++ b/FREELA-API/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# configuração caso desejemos mudar a porta da API
+# configuraï¿½ï¿½o caso desejemos mudar a porta da API
 
 # server.port=9090
 
@@ -12,10 +12,13 @@ spring.h2.console.enabled=true
 
 spring.datasource.url=jdbc:h2:mem:nome_banco
 
-# habilita a impressão dos comando SQL no log
+# habilita a impressï¿½o dos comando SQL no log
 
 spring.jpa.show-sql=true
 
 # formata os SQL (quebra linha, identa etc)
 
 spring.jpa.properties.hibernate.format_sql=true
+
+# Habilita data.sql
+spring.jpa.defer-datasource-initialization=true
