feat: adiciona configuracao para banco de dados na nuvem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,29 @@
 
 # server.port=9090
 
+# Indica qual a URL de acesso ao banco (MySQL)
+spring.datasource.url=jdbc:mysql://3.223.249.45:3306/freela_db
+
+# Configuração do driver do MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Nome de usuário e senha do banco de dados MySQL
+spring.datasource.username=freela_user
+spring.datasource.password=Freela-01221@
+
+# Dialeto do Hibernate para MySQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Desabilita o console H2
+spring.h2.console.enabled=false
+
 # Num navegador, permite o acesso a http://localhost:8080/h2-console
 
-spring.h2.console.enabled=true
+# spring.h2.console.enabled=true
 
 # indica qual a URL de acesso ao banco
 
-spring.datasource.url=jdbc:h2:mem:nome_banco
+# spring.datasource.url=jdbc:h2:mem:nome_banco
 
 # habilita a impressï¿½o dos comando SQL no log
 
@@ -20,6 +36,9 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Habilita data.sql
 spring.jpa.defer-datasource-initialization=true
+
+# Configuração do Hibernate
+spring.jpa.hibernate.ddl-auto=update
 
 # validade do token
 jwt.validity=3600000
