feat: new encoding file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@
 # Indica qual a URL de acesso ao banco (MySQL)
 spring.datasource.url=jdbc:mysql://3.223.249.45:3306/freela_db
 
-# Configuração do driver do MySQL
+# Configuraï¿½ï¿½o do driver do MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Nome de usuário e senha do banco de dados MySQL
+# Nome de usuï¿½rio e senha do banco de dados MySQL
 spring.datasource.username=freela_user
 spring.datasource.password=Freela-01221@
 
@@ -37,7 +37,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # Habilita data.sql
 spring.jpa.defer-datasource-initialization=true
 
-# Configuração do Hibernate
+# Configuraï¿½ï¿½o do Hibernate
 spring.jpa.hibernate.ddl-auto=update
 
 # validade do token
